avoid clipping the container cell buttons

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -348,7 +348,8 @@ ul.available-interfaces-group {
 
 #containers .cell-buttons button,
 #containers .table > tbody > tr > .cell-buttons button {
-    float: right;
+    position: absolute;
+    right: 30px;
 }
 
 /*
